k8s_implementation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creative-studio-service
spec:
  selector:
    app: creative-studio
  ports:
    - port: 5000
      nodePort: 32000
      targetPort: 3000
      name: http
      protocol: TCP
  type: NodePort
