k8s_implementation/base/networkpolicy-allow-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-creative-studio-ingress
  namespace: creative-studio
spec:
  podSelector:
    matchLabels:
      app: creative-studio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 3000
