k8s_implementation/base/networkpolicy-allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: creative-studio
spec:
  podSelector:
    matchLabels:
      app: creative-studio
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
