k8s_implementation/base/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: creative-studio
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
